[fix] import path

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           git clone https://github.com/niuez/Niu niu
           cargo install --path niu
-          export NIU_IMPORT_PATH="./lib/;"
+          export NIU_IMPORT_PATH="./niu/lib/;"
           export RUST_LOG=info
       - name: test library and generate document
         run: |
